# ak12141_demo_repo

./: .gitignore  README.md  notes.txt  pyproject.toml
.circleci/: config.yml
src/: main.py
